# probepath

./: .gitignore  DESIGN.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
examples/N01_private_subnet_suppressed/: expected.yaml  main.tf  plan.tfplan.json
examples/P01_textbook_public_rds/: expected.yaml  main.tf  plan.tfplan.json  provider.tf
examples/P02_directly_public_rds/: expected.yaml  main.tf  plan.tfplan.json
examples/T01_unknown_cidr_conservative/: expected.yaml  main.tf  plan.tfplan.json
examples/demo_corp_stack/: expected.yaml  main.tf  plan.tfplan.json
scripts/: regen_fixtures.sh
src/probepath/: __init__.py  cli.py  errors.py
src/probepath/aws/: __init__.py  loadbalancer.py  network.py  resource_types.py  routing.py  s3.py
src/probepath/engine/: __init__.py  builder.py  reachability.py
src/probepath/findings/: __init__.py  diff.py  finding.py
src/probepath/ingest/: __init__.py  hcl.py  normalized.py  plan.py  state.py  unknown.py
src/probepath/model/: __init__.py  cidr.py  edges.py  enums.py  graph.py  nodes.py  ports.py
src/probepath/report/: __init__.py  human.py  json_report.py  mermaid.py  sarif.py
tests/: test_cli.py  test_fixtures.py  test_ingest_formats.py  test_properties.py  test_review_fixes.py
tests/unit/: test_cidr.py  test_ports.py  test_unknown.py
